<resources>
    <string name="app_name" translatable="false">Quizion</string>
    <string name="preference_file_key" translatable="false">hu.petrik.quizion.QuizionSharedPreferences</string>
    <string name="username">Username</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="username_or_email">Username or Email</string>
    <string name="login">Login</string>
    <string name="play">Play</string>
    <string name="send">Send</string>
    <string name="skip">skip</string>
    <string name="login_failed">Login failed</string>
    <string name="login_successful">Login successful</string>
    <string name="state">State</string>
    <string name="answers">Answers</string>
    <string name="connection_failed">Connection failed</string>
    <string name="error">Error</string>
    <string name="header">Header</string>
    <string name="description">Description</string>
    <string name="send_error">Sending Error</string>
    <string name="server_connection_error">Cannot connect to server</string>
    <string name="validation_lowercase">lowercase</string>
    <string name="validation_uppercase">uppercase</string>
    <string name="validation_number_or_special">either numeric or special</string>
    <string name="validation_char">character</string>
    <string name="validation_and">"and "</string>
    <string name="validation_must">Password must contain</string>
    <string name="next">Next</string>
    <string name="share">Share</string>
    <string name="back_to_quizes">Back to quizzes</string>
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="points">Points</string>
    <string name="password_field_required">Password required!</string>
    <string name="password_field_min_8">Password must be at least 8 characters long!</string>
    <string name="password_field_max_64">Password cannot be longer than 64 characters!</string>
    <string name="passwords_not_same">The two passwords must be identical!</string>
    <string name="register_successful">Register successful</string>
    <string name="email_field_required">E-mail address required!</string>
    <string name="email_too_long">E-mail is too long!</string>
    <string name="email_invalid">The e-mail format is invalid!</string>
    <string name="uname_field_required">Username required!</string>
    <string name="uname_min_6">Username must be at least 6 characters long!</string>
    <string name="uname_max_25">Username cannot be longer than 25 characters!</string>
    <string name="uname_alphanumeric">Username might contain only letters, numbers, and space!</string>
    <string name="remember_me">Remember me</string>
    <string name="uid_field_missing">Missing user ID</string>
    <string name="password_field_missing">Missing password</string>
    <string name="app_users_pref_file" translatable="false">Quizion_Users</string>
    <string name="cancel">Cancel</string>
    <string name="renew_password">Please enter your password again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_as">Login as...</string>
    <string name="log_in_other_user">Log in with another profile</string>
    <string name="sure_forget">Are you sure you want to forget this account?</string>
    <string name="forget_profile">Forget profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_timeout">Server not responding!</string>
    <string name="email_not_verified">Email should be verified before login</string>
    <string name="check_mailbox">Check the mailbox</string>
    <string name="resend_email">Resend email</string>
    <string name="email_sent">Confirmation email sent</string>
    <string name="error_email_send">Error while sending sending comfirmation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
</resources>