<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    android:gravity="start"
    android:orientation="vertical"
    tools:context=".fragments.EmailVerificationFragment">

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="4"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:textAlignment="center"
        android:text="@string/email_not_verified"
        android:textColor="@color/textColorPrimary"
        android:textSize="25sp" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCheckMailbox"
        style="@style/action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/check_mailbox" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonResendEmail"
        style="@style/action_button"
        android:layout_marginVertical="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/resend_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        style="@style/action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="10"/>

</LinearLayout>