<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LeaderboardFragment"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingVertical="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/rank"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/textColorPrimary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="18dp"
            android:text="@string/points"
            android:textColor="@color/textColorPrimary"
            android:textSize="20sp" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="68"
        android:background="@drawable/leaderboard_frame"
        android:layout_marginHorizontal="10dp"
        android:paddingTop="6dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical"
            android:id="@+id/layout_Leaderboard">
        </LinearLayout>
        <!-- Vége -->
    </ScrollView>
    <!-- Alsó rész -->
    <RelativeLayout
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@drawable/answer"
        android:id="@+id/layout_Result_Self">
        <TextView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="#200000000"
            android:layout_marginStart="10dp"
            android:id="@+id/order"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:layout_toEndOf="@id/order"
            android:layout_toStartOf="@id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Probaboi"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:text="100000"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            android:id="@+id/points"
            android:textColor="@color/colorPrimaryDark"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center_vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/back_to_quizes"
            style="@style/action_button"/>
        <!--Megosztás gomb, később talán bekerül-->
        <com.google.android.material.button.MaterialButton
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/share"
            android:backgroundTint="@color/colorPrimaryDark"
            android:visibility="gone"/>
    </RelativeLayout>
</LinearLayout>